--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="login-popup">
+    <!-- <div class="login-popup">
         <div class="close-btn">&times;</div>
         <div class="form">
             <h2>Log in</h2>
@@ -31,7 +31,7 @@
                 <a href="#">Forgot password?</a>
             </div>
         </div>
-     </div>
+     </div> -->
     <main>
         <div class="container">
             <h1>Napi munkaidő rögzítése</h1>
